--- a/index.html
+++ b/index.html
@@ -114,5 +114,16 @@
     </footer>
 
     <script src="styles/style.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script>
+      Toastify({
+        text: "Ticket added!",
+        backgroundColor: "#4CAF50",
+      }).showToast();
+    </script>
   </body>
 </html>
